# Halogen

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  install_packages.bat  install_packages.sh
halogen/src/include/: common.h  configuration.h  halogen.h  log.h
halogen/src/include/core/: configuration.h  engine.h  input.h  platform.h  window.h
halogen/src/include/core/graphics/: renderer.h  vk_debug.h  vk_utils.h
halogen/src/source/: engine.cpp  input.cpp  main.cpp  platform.cpp  window.cpp
halogen/src/source/graphics/: renderer.cpp
shaders/: default_env_lit.frag  default_lit.frag  default_mesh.frag  default_mesh.vert  fragment_shader.frag  hardcoded_simple_triangle.frag  hardcoded_simple_triangle.vert  plain_triangle_fragment_shader.frag  plain_triangle_vertex_shader.vert  rgb_triangle_fragment_shader.frag  rgb_triangle_vertex_shader.vert  simple_inverted_triangle.frag  simple_inverted_triangle.vert  simple_triangle.frag  simple_triangle.vert  triangle_mesh.vert  triangle_test.frag  vertex_buffer_vertex_shader.vert  vertex_shader.vert
src/: CMakeLists.txt  configuration.h  halogen.h  log.h  main.cpp
src/core/: engine.cpp  input.cpp  input.h  platform.cpp  platform.h  window.cpp  window.h
src/core/graphics/: renderer.cpp  renderer.h  vk_debug.h  vk_initializers.cpp  vk_initializers.h
src/include/: camera.h  common.h  configuration.h  custom_math.h  engine.h  halogen.h  initializers.h  log.h  mesh.h  pipeline.h  timer.h  types.h  vk_initializers.h  vk_mesh.h  vk_pipeline.h  vk_types.h
src/include/core/: common.h  configuration.h  engine.h  input.h  log.h  platform.h  timer.h  window.h
src/include/core/game/: camera.h  game_object.h  scene.h
src/include/core/graphics/: device.h  instance.h  pipeline.h  renderer.h  renderer_settings.h  surface.h  swapchain.h  vk_debug.h  vk_external.h  vk_initializers.h  vk_mesh.h  vk_pipeline.h  vk_types.h
src/include/core/internal/: engine.h  input.h  platform.h  timer.h  window.h
src/include/core/math/: math.h  matrix3x3.h  matrix4x4.h  matrix_transform.h  vector2.h  vector3.h  vector4.h
src/source/: camera.cpp  engine.cpp  initializers.cpp  input.cpp  main.cpp  mesh.cpp  pipeline.cpp  platform.cpp  timer.cpp  vk_initializers.cpp  vk_mesh.cpp  vk_pipeline.cpp  window.cpp
src/source/game/: camera.cpp  game_object.cpp  scene.cpp
src/source/graphics/: device.cpp  instance.cpp  pipeline.cpp  renderer.cpp  renderer_settings.cpp  surface.cpp  swapchain.cpp  vk_initializers.cpp  vk_mesh.cpp  vk_pipeline.cpp
src/source/internal/: engine.cpp  input.cpp  platform.cpp  timer.cpp  window.cpp
src/source/math/: matrix3x3.cpp  matrix4x4.cpp  vector2.cpp  vector3.cpp  vector4.cpp
